--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -51,54 +51,72 @@ figure {
 }
 
 .swiper {
-        width: 100%;
-        height: 100%;
-      }
+    width: 100%;
+    height: 100%;
+}
 
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
 
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-      }
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+.mySwiper2 {
+    height: 20%;
+    box-sizing: border-box;
+    padding: 10px 0;
+}
 
-      body {
+.mySwiper2 .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+}
 
-        color: #000;
-      }
-      .mySwiper2 {
-        height: 20%;
-        box-sizing: border-box;
-        padding: 10px 0;
-      }
+.mySwiper2 .swiper-slide-thumb-active {
+    opacity: 1;
+}
 
-      .mySwiper2 .swiper-slide {
-        width: 25%;
-        height: 100%;
-        opacity: 0.4;
-      }
-
-      .mySwiper2 .swiper-slide-thumb-active {
-        opacity: 1;
-      }
-
+.swiperBanner{
+    height: 560px;
+}
+.indexNewsImg{
+    width:120px;
+}
+.CateBannerPic{
+    height: 380px;
+}
+.Content img{
+    max-width: 100%;
+}
+@media (max-width: 991.98px) {
+    .swiperBanner{
+        height: 260px;
+    }
+    .indexNewsImg{
+        width:100%;
+    }
+    .CateBannerPic{
+        height: 200px;
+    }
+}
