--- a/Template/default/detail_article.html
+++ b/Template/default/detail_article.html
@@ -11,8 +11,8 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-40" style="height: 380px;">
-        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40 CateBannerPic">
+        <div style="background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
     <div class="container text-dark bg-white p-4 mb-40">
         <h1>{{qcms:Detail_Title}}</h1>
