--- a/Template/default/detail_down.html
+++ b/Template/default/detail_down.html
@@ -11,12 +11,12 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-40" style="height: 380px;">
-        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40 CateBannerPic" >
+        <div style="background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
     <div class="container text-dark mb-40">
         <div class="row">
-            <div class="col-8" >
+            <div class="col-12 col-md-8 mb-40 mb-md-0" >
                 <div class="bg-white p-4">
                     <div class=" mb-4">
                         <div class="text-secondary">
@@ -30,14 +30,14 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <p>软件大小：<span class="text-dark ">{{qcms:Detail_Size}}</span></p>
                                     <p>软件语言：<span class="text-dark ">{{qcms:Detail_Lang}}</span></p>
                                     <p>应用平台：<span class="text-dark">{{qcms:Detail_Platform}}</span></p>
 
                                     <p>软件授权：<span class="text-dark ">{{qcms:Detail_Auth}}</span></p>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <p>软件评级：<span class="text-dark ">{{qcms:Detail_Level}} 星级</span></p>
                                     <p>软件厂商：<span class="text-dark">{{qcms:Detail_Company}}</span></p>
                                     <p>官方网站：<span class="text-dark">{{qcms:Detail_WebSite}}</span></p>
@@ -56,7 +56,7 @@
                     <a class="btn btn-primary my-3" href="{{qcms:Detail_DownAddress}}" target="_blank"><i class="bi bi-arrow-down mr-1"></i>立即下载</a>
                 </div>
             </div>
-            <div class="col-4" >
+            <div class="col-12 col-md-4" >
                 <div class="bg-white">
                     <div class="bg-white px-4 pt-3 pb-2">
                         <div class="font-weight-bold mb-2">下载排行</div>
