--- a/Template/default/index_main.html
+++ b/Template/default/index_main.html
@@ -15,7 +15,7 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 {{slide SwiperCateId='1'}}
-                <a href="{{qcms:Slide_Link}}" class="swiper-slide" style="height: 560px;">
+                <a href="{{qcms:Slide_Link}}" class="swiper-slide swiperBanner" >
                 <div class="" style="background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Slide_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;">
                 </div>
                 </a>
@@ -31,7 +31,7 @@
     <div class="container mb-40">
         <div class="row text-center">
             {{list Model='product' Row='8'}}
-            <div class="col-3 p-2">
+            <div class="col-6 col-md-3 p-2">
                 <a href="{{qcms:List_Url}}">
                 <div class="bg-white p-2">
                 <img class="w-100 mb-3 d-block" src="{{qcms:List_Pic}}">
@@ -47,17 +47,17 @@
 
     <div class="container mb-40 px-2">
         <div class="row">
-            <div class="col-8" >
+            <div class="col-12 col-md-8" >
 
                     <div class="h5 text-black py-2 font-weight-bold">新闻动态</div>
                     <div class="bg-white py-2" >
                         {{list Model='article' Row='5'}}
-                        <div class="p-4 border-bottom d-flex">
+                        <div class="p-4 border-bottom d-md-flex">
 
-                            <div class="mr-3"><a href="{{qcms:List_Url}}"><img class="d-block " src="{{qcms:List_Pic}}" style="width:120px;"></a></div>
+                            <div class="mb-2 mb-md-1 mr-md-3"><a href="{{qcms:List_Url}}"><img class="d-block indexNewsImg" src="{{qcms:List_Pic}}" ></a></div>
                             <div class="d-flex align-items-start flex-column">
                                 <a href="{{qcms:List_Url}}">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
+                                <div class="font-weight-bold " style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_Summary}}</div>
                                 </a>
                                 <div class="mt-auto">
@@ -70,7 +70,7 @@
                         {{/list}}
                     </div>
             </div>
-            <div class="col-4" >
+            <div class="col-12 col-md-4" >
 
                     <div class="h5 text-black py-2 font-weight-bold">下载中心</div>
                     <div  class="bg-white" >
@@ -102,7 +102,7 @@
     <div class="container mb-4">
         <div class="row ">
             {{list Model='album' Row='6'}}
-            <div class="col-4 p-2">
+            <div class="col-6 col-md-4 p-2">
                 <a href="{{qcms:List_Url}}">
                 <img class="img-thumbnail w-100 d-block" src="{{qcms:List_Pic}}">
                 </a>
