--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -11,23 +11,23 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-40" style="height: 380px;">
-        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40 CateBannerPic">
+        <div style="background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
     <div class="container mb-40 px-2">
         <div class="row">
-            <div class="col-8" >
+            <div class="col-12 col-md-8" >
 
                     <div class="h5 text-black py-2 font-weight-bold">{{qcms:Cate_Name}} </div>
                     <div class="bg-white py-2" >
                         {{list Model='article' CateId='{{qcms:Cate_CateId}}' Row='10' IsPage='1'}}
-                        <div class="p-4 border-bottom d-flex">
+                        <div class="p-4 border-bottom d-md-flex">
 
-                            <div class="mr-3"><a class="" href="{{qcms:List_Url}}"><img class="d-block border" src="{{qcms:List_Pic}}" style="width:120px;"></a></div>
+                            <div class="mb-2 mb-md-1 mr-md-3"><a class="" href="{{qcms:List_Url}}"><img class="d-block border indexNewsImg" src="{{qcms:List_Pic}}" ></a></div>
                             <div class="d-flex align-items-start flex-column">
                                 <a class="" href="{{qcms:List_Url}}">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
-                                <div class="text-secondary mb-1">{{qcms:List_Summary}}</div>
+                                <div class="font-weight-bold" style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
+                                <div class="text-secondary">{{qcms:List_Summary}}</div>
                                 </a>
                                 <div class="mt-auto">
                                     {{qcms:List_Tag}}
@@ -43,7 +43,7 @@
 
 
             </div>
-            <div class="col-4" >
+            <div class="col-12 col-md-4" >
                     <div class="h5 text-black py-2 font-weight-bold">热门新闻</div>
                     <div  class="bg-white p-4 mb-4" >
                         {{list Module='article' CateId='{{qcms:Cate_CateId}} ' Row='10'}}
