--- a/Template/default/list_down.html
+++ b/Template/default/list_down.html
@@ -11,12 +11,12 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-40" style="height: 380px;">
-        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40 CateBannerPic">
+        <div style="background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
     <div class="container mb-40 px-2">
         <div class="row">
-            <div class="col-8" >
+            <div class="col-12 col-md-8 mb-40 mb-md-0" >
 
                     <div class="h5 text-black py-2 font-weight-bold">{{qcms:Cate_Name}}</div>
                     <div class="bg-white py-2" >
@@ -45,7 +45,7 @@
 
 
             </div>
-            <div class="col-4" >
+            <div class="col-12 col-md-4" >
 
 
                     <div class="h5 text-black py-2 font-weight-bold">下载排行</div>
