--- a/Template/default/list_product.html
+++ b/Template/default/list_product.html
@@ -11,8 +11,8 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-40" style="height: 380px;">
-        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40 CateBannerPic">
+        <div style="background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
 
     <div class=" text-center mb-3">
@@ -22,7 +22,7 @@
     <div class="container mb-40">
         <div class="row text-center">
             {{list Model='product' CateId='{{qcms:Cate_CateId}}' Row='12' IsPage='1'}}
-            <div class="col-3 py-2 px-2 ">
+            <div class="col-6 col-md-3 py-2 px-2 ">
                 <a href="{{qcms:List_Url}}">
                 <div class="bg-white p-2">
                 <img class="w-100 d-block mb-3" src="{{qcms:List_Pic}}">
