--- a/Template/default/component_header.html
+++ b/Template/default/component_header.html
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
     <div class="container py-3">
         <a class="navbar-brand" href="/">
-        <svg class="logo mx-3" style="fill: #1572E8!important;width: 98px;height: 24px;" >
-            <use xlink:href="{{qcms:Logo}}#layer"/>
-        </svg>
+        <img src="{{qcms:Logo}}" class="logo mx-3" style="height: 30px;" />
+
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
